--- a/exercises-4/index.html
+++ b/exercises-4/index.html
@@ -6,7 +6,7 @@
 
     <div hidden><bold>Lorem ipsum</bold></div>
 
-    <div><i>Power Of The Dark Side that is!</i></div>
+    <span><i>Power Of The Dark Side that is!</i></span>
 
 
 
