--- a/exercises-3/index.html
+++ b/exercises-3/index.html
@@ -58,13 +58,13 @@
 
     <form>
         <label>First name</label>
-    <input type="text" name="first name">
+    <input type="text" name="first name" maxlength="50">
         <br>
         <label>Last name</label>
-      <input type="text" name="last name">
+      <input type="text" name="last name" maxlength="50">
         <br>
           <label>Address</label>
-         <input type`="text" name="address">
+         <input type`="text" name="address" maxlength="50">
         <br>
             <label>Zip Code</label>
           <input type="text" name="zip code">
@@ -73,11 +73,21 @@
               <input type="text" name="city">
         <br>
                 <label>Phone number</label>
-               <input type="text"   name="phone number">
+               <input type="text"   name="phone number" maxlength="50">
         <br>
                   <label>Email Address</label>
                   <input type="text" name="email address">
         <br>
+        <label>Standard</label>
+        <input type="radio" name="selection">
+        <br>
+        <label>Express</label>
+        <input type="radio" name="selection">
+        <br>
+        <label>Home delivery</label>
+        <input type="radio" name="selection">
+        <br>
+        <p>&lt;div&gt;&lt;&#47;div&gt;</p>
 
 
 
